--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reporter",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Email reports at the end of running a job. Also does errors. Common to my projects.",
   "main": "Reporter.js",
   "scripts": {
@@ -20,5 +20,9 @@
     "gmail-model": "git://github.com/nigelsdtech/gmail-model.git#8f53eb8cbf9d2de02550bdad5238cf49c21c73e9",
     "rewire": "2.5.2",
     "sinon": "1.17.4"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.4"
   }
 }
